--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
         </p>
        
         
-        <h2>Contact</h2>
+        <h2>Find me</h2>
         <p>
-            <b>Email:</b> hy.huang@bristol.ac.uk<br><br>
+            <b>Name in Chinese:</b> 黄弘毅<br><br>
+            <b>Preferred contact name:</b> Hongyi (he/him)<br><br>
+            <b>Email:</b> hy.huang (AT) bristol.ac.uk<br><br>
             <b>Phone:</b> +44 (0)757 995 6791<br><br>
             <b>Address:</b> <a href="http://www.bristol.ac.uk/maths/">School of Mathematics</a>, <a href="https://www.bristol.ac.uk/">University of Bristol</a>, BS1 8UG, UK<br><br>
             <b>Office:</b> 1.17A Fry Building, BS1 8UG<br><br>
