--- a/talks.html
+++ b/talks.html
@@ -46,7 +46,7 @@
         <div class="list">
        <ul>
            <li> August: <b>Base-two primitive permutation groups</b><br>
-               Groups St Andrews, Newcastle University</li>
+               Groups St Andrews, Newcastle</li>
          <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
            Group Theory Seminar, SUSTech </li>
        </ul>
