--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
        <ul>
            <li> August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
+           <li> 24th May: <b>Bases, distinguishing numbers and Saxl graphs</b><br>
+               Group Theory Seminar, SUSTech</li>
          <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
            Group Theory Seminar, SUSTech </li>
        </ul>
