--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
-           <li> 24th May: <b>Bases for primitive permutation groups</b><br>
+           <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="RegPower_220524.pdf">slides</a>)<br>
                Group Theory Seminar, SUSTech</li>
          <li> 19th Febrary: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
            Group Theory Seminar, SUSTech </li>
