--- a/talks.html
+++ b/talks.html
@@ -45,6 +45,8 @@
       <p>
         <div class="list">
        <ul>
+           <li> August: <b>Symmetry breaking: bases and distinguishing partitions of graphs and groups</b><br>
+               Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
            <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a>)<br>
