--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
       <p>
         <div class="list">
        <ul>
-           <li> August: <b>Symmetry breaking: bases, distinguishing partitions and probability</b><br>
+           <li> August: <b>Symmetry breaking: bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
