--- a/talks.html
+++ b/talks.html
@@ -45,10 +45,16 @@
       <p>
         <div class="list">
        <ul>
+           <li> September: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+               Young Group Theorists Workshop, Les Diablerets</li>
            <li> August: <b>Symmetry breaking: bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
+           <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+               Groups and Graphs, Jiangxi University of Science and Technology</li>
+           <li> July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+               23rd Postgraduate Group Theory Conference, London</li>
            <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a>)<br>
                Group Theory Seminar, SUSTech</li>
          <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
