--- a/talks.html
+++ b/talks.html
@@ -53,7 +53,7 @@
                Groups St Andrews, Newcastle</li>
            <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
-           <li> July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+           <li> 8th July: <b>Base-two primitive permutation groups</b><br>
                23rd Postgraduate Group Theory Conference, London</li>
            <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a>)<br>
                Group Theory Seminar, SUSTech</li>
