--- a/talks.html
+++ b/talks.html
@@ -54,7 +54,7 @@
            <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
            <li> 8th July: <b>Base-two primitive permutation groups</b><br>
-               23rd Postgraduate Group Theory Conference, King's College London</li>
+               23rd Postgraduate Group Theory Conference, Imperial College London</li>
            <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a>)<br>
                Group Theory Seminar, SUSTech</li>
          <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
