--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
           
            <li> <i> On base sizes for primitive groups of product type </i> <br>
               joint with T.C. Burness <br>
-            41 pages, submitted<br>
+               <b>Journal of Pure and Applied Algebra</b>, to appear <br>
             <a href="https://arxiv.org/abs/2202.02816">arXiv:2202.02816</a> </li>
           </ol>
         
