--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> August: <b>Symmetry breaking: bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
-           <li> August: <b>Base-two primitive permutation groups</b><br>
+           <li> 2nd August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
            <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
