--- a/talks.html
+++ b/talks.html
@@ -51,7 +51,7 @@
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 2nd August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
-           <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+           <li> 24th July: <b>Base-two primitive permutation groups and their Saxl graphs</b> (<a href="GAG_220724.pdf">slides</a>) <br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
            <li> 8th July: <b>Base-two primitive permutation groups</b> (<a href="PGTC_220708.pdf">slides</a>) <br>
                23rd Postgraduate Group Theory Conference, Imperial College London</li>
