--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> September: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
                Young Group Theorists Workshop, Les Diablerets</li>
-           <li> August: <b>Symmetry breaking: bases, distinguishing partitions and probabilistic methods</b><br>
+           <li> 1st September: <b>Symmetry breaking: bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 2nd August: <b>Base-two primitive permutation groups</b><br>
                Groups St Andrews, Newcastle</li>
