--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
       <p>
         <div class="list">
        <ul>
-           <li> 5th September: <b>Base-two primitive permutation groups and their Saxl graphs</b><br>
+           <li> 5th September: <b>Base-two primitive permutation groups</b><br>
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
