--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b><br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
-           <li> 4th August: <b>Base-two primitive permutation groups</b><br>
+           <li> 4th August: <b>Base-two primitive permutation groups</b> (<a href="StAndrews_220804.pdf">slides</a>) <br>
                Groups St Andrews, Newcastle</li>
            <li> 24th July: <b>Base-two primitive groups and their Saxl graphs</b> (<a href="GAG_220724.pdf">slides</a>) <br>
                Groups and Graphs, Jiangxi University of Science and Technology</li>
