--- a/talks.html
+++ b/talks.html
@@ -39,7 +39,7 @@
       <h2> Talks </h2>
 
        <p> </p>
-      <p> I'm happy to give talks/lectures to everyone on any topics that I'm familiar with. The following are my talks about my research projects. </p>
+      <p> I'm happy to give talks/lectures to everyone on any topic that I'm familiar with. The following are my talks about my research projects. </p>
       
       <h4> 2022 </h4>
       <p>
