--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> 5th September: <b>Base-two primitive permutation groups</b><br>
                Young Group Theorists Workshop, Les Diablerets</li>
-           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b><br>
+           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> (<a href="Melbourne_220818.pdf">slides</a>)<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 4th August: <b>Base-two primitive permutation groups</b> (<a href="StAndrews_220804.pdf">slides</a>) <br>
                Groups St Andrews, Newcastle</li>
