--- a/talks.html
+++ b/talks.html
@@ -55,9 +55,9 @@
                Groups and Graphs, Jiangxi University of Science and Technology</li>
            <li> 8th July: <b>Base-two primitive permutation groups</b> (<a href="PGTC_220708.pdf">slides</a>) <br>
                23rd Postgraduate Group Theory Conference, Imperial College London</li>
-           <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a>)<br>
+           <li> 24th May: <b>Bases for primitive permutation groups</b> (<a href="SUSTech_220524.pdf">slides</a> | <a href="https://www.gtseminar.xyz/history/2022-05-24-hyh.html">webpage</a>)<br>
                Group Theory Seminar, SUSTech</li>
-         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a>) <br>
+         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> (<a href="RegPower_220219.pdf">slides</a> | <a href="https://www.gtseminar.xyz/history/2022-02-19-ropgps.html">webpage</a>) <br>
            Group Theory Seminar, SUSTech </li>
        </ul>
       </div>
@@ -70,7 +70,7 @@
        <ul>
          <li> 13th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="43ACC_211213.pdf">slides</a>) <br>
            43rd Australasian Combinatorics Conference, University of Melbourne </li>
-         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a>)<br>
+         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a> | <a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>)<br>
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="LMS_211108.pdf">slides</a>)<br>
            LMS Graduate Student Meeting Winter 2021 </li>
