--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> 5th September: <b>Base-two primitive permutation groups</b><br>
                Young Group Theorists Workshop, Les Diablerets</li>
-           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> (<a href="Melbourne_220818.pdf">slides</a>)<br>
+           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> (<a href="Melbourne_220818.pdf">slides</a> | <a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>)<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 4th August: <b>Base-two primitive permutation groups</b> (<a href="StAndrews_220804.pdf">slides</a>) <br>
                Groups St Andrews, Newcastle</li>
@@ -70,7 +70,7 @@
        <ul>
          <li> 13th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="43ACC_211213.pdf">slides</a>) <br>
            43rd Australasian Combinatorics Conference, University of Melbourne </li>
-         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a> | <a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>)<br>
+         <li> 14th November: <b> Regular suborbits of finite primitive groups </b> (<a href="SUSTech_211114.pdf">slides</a>)<br>
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> (<a href="LMS_211108.pdf">slides</a>)<br>
            LMS Graduate Student Meeting Winter 2021 </li>
