--- a/research.html
+++ b/research.html
@@ -70,7 +70,7 @@
            <li> <i> On base sizes for primitive groups of product type </i> <br>
               joint with T.C. Burness <br>
                <b>Journal of Pure and Applied Algebra</b>, to appear <br>
-            <a href="https://arxiv.org/abs/2202.02816">arXiv:2202.02816</a> </li>
+            <a href="https://arxiv.org/abs/2202.02816">arXiv:2202.02816</a> | <a href="https://doi.org/10.1016/j.jpaa.2022.107228">doi: 10.1016/j.jpaa.2022.107228</a> </li>
           </ol>
         
     </p>
