--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
       <p>
         <div class="list">
        <ul>
-           <li> 5th September: <b>Base-two primitive permutation groups</b><br>
+           <li> 5th September: <b>Base-two primitive permutation groups</b> (<a href="YGT_220905.pdf">slides</a>)<br>
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> (<a href="Melbourne_220818.pdf">slides</a> | <a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>)<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
