--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
           
            <li> <i> On base sizes for primitive groups of product type </i> <br>
               joint with T.C. Burness <br>
-               <b>Journal of Pure and Applied Algebra</b>, to appear <br>
+               <b>Journal of Pure and Applied Algebra</b> 227 (2023), 107228, 43 pp. <br>
             <a href="https://arxiv.org/abs/2202.02816">arXiv:2202.02816</a> | <a href="https://doi.org/10.1016/j.jpaa.2022.107228">doi: 10.1016/j.jpaa.2022.107228</a> </li>
           </ol>
         
