--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
       <p>
         <div class="list">
        <ul>
-           <li> 5th September: <b>Base-two primitive permutation groups</b> (<a href="YGT_220905.pdf">slides</a>)<br>
+           <li> 5th September: <b>Base-two primitive permutation groups</b> (<a href="YGT_220905.pdf">slides</a> | <a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>)<br>
                Young Group Theorists Workshop, Les Diablerets</li>
            <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> (<a href="Melbourne_220818.pdf">slides</a> | <a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>)<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
@@ -78,7 +78,7 @@
            Group Theory Seminar, SUSTech </li>
        <li> 21st May: <b> Groups, graphs and transitivity </b> (<a href="Transitive graphs_210521.pdf">slides</a>) <br>
               Junior Algebra Colloquium, UoB </li>
-       <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a>) <br>
+       <li> 22nd April: <b> The probabilistic method in group theory </b> (<a href="Prob_210422.pdf">slides</a> | <a href="https://math.sustech.edu.cn/seminar_all/12102.html?lang=en">webpage</a>) <br>
               Discrete Mathematics Seminar, SUSTech <br>
               (This was also the third part of the following talk.)</li>
        <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> (<a href="Fixed point ratios.pdf">slides I</a> and <a href="fpr2.pdf">slides II</a>) <br>
