--- a/meetings.html
+++ b/meetings.html
@@ -69,7 +69,7 @@
       <div class="list">
         <ul>
             
-            <li> 19th -- 23rd June: <b>CMI-HIMR Summer School Probabilistic Group Theory</b> (<a href="https://web-eur.cvent.com/event/1c4ee187-2fb3-4d9b-aa98-27ec01200405/summary?RefId=Host">link</a>) <br>
+            <li> 19th -- 23rd June: <b>CMI-HIMR Summer School: Probabilistic Group Theory</b> (<a href="https://web-eur.cvent.com/event/1c4ee187-2fb3-4d9b-aa98-27ec01200405/summary?RefId=Host">link</a>) <br>
             UoB, Bristol, UK </li>
             <li> 27th -- 29th March: <b>Fry Conference Series: New Perspectives in Pure Mathematics</b> (<a href="https://web-eur.cvent.com/event/94f58e8e-50a1-401d-a0ca-0f5322d8f4b8/summary?RefId=HIMR">link</a>) <br>
             UoB, Bristol, UK </li>
