--- a/research.html
+++ b/research.html
@@ -63,7 +63,7 @@
             <li> <i>On the Saxl graphs of primitive groups with soluble stabilisers</i> <br>
               joint with T.C. Burness <br>
             <b>Algebraic Combinatorics</b> 5 (2022), 1053-1087<br>
-                <a href="https://arxiv.org/abs/2105.11861">arXiv:2105.11861</a> | <a href="https://alco.centre-mersenne.org/articles/10.5802/alco.238/">doi: 10.5802/alco.238</a> </li>
+                <a href="https://arxiv.org/abs/2105.11861">arXiv:2105.11861</a> | <a href="https://alco.centre-mersenne.org/articles/10.5802/alco.238/">doi: 10.5802/alco.238</a> | <a href="https://mathscinet.ams.org/mathscinet/search/publdoc.html?arg3=&co4=AND&co5=AND&co6=AND&co7=AND&dr=all&pg4=AUCN&pg5=TI&pg6=PC&pg7=ALLF&pg8=ET&review_format=html&s4=&s5=Saxl%20graph&s6=&s7=&s8=All&sort=Newest&vfpref=html&yearRangeFirst=&yearRangeSecond=&yrop=eq&r=1&mx-pid=4511160">MathSciNet: MR4511160</a> </li>
             
             
             <li> <i> On base sizes for primitive groups of product type </i> <br>
