--- a/meetings.html
+++ b/meetings.html
@@ -55,7 +55,7 @@
     <h3> Seminar organisation </h3>
     
     <p>
-      I currently co-organise the <a href="https://www.gtseminar.xyz/">Group Theory Seminar</a> based at SUSTech. If you are a young group theorist and want to give a talk, feel free to drop me an email.
+      I am co-organising the <a href="https://www.gtseminar.xyz/">Group Theory Seminar</a> based at SUSTech from 2021.
     </p>
     
   
