--- a/meetings.html
+++ b/meetings.html
@@ -55,7 +55,7 @@
     <h3> Seminar organisation </h3>
     
     <p>
-      I am co-organising the <a href="https://www.gtseminar.xyz/">Group Theory Seminar</a> based at SUSTech from 2021.
+      I am co-organising the <a href="https://www.gtseminar.xyz/">Seminars on Groups and Graphs</a> based at SUSTech from 2021.
     </p>
     
   
