--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 27th May: <b>Simple groups, bases and fixed point ratios</b> <br>
+           <li> 27th May: <b>Symmetry breaking on primitive groups</b> <br>
                Seminars on Groups and Graphs, SUSTech</li>
        </ul>
       </div>
