--- a/talks.html
+++ b/talks.html
@@ -45,6 +45,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 23rd March: <b>Bases for permutation groups</b> <br>
+               Junior London Algebra Colloquium, Imperial College London</li>
            <li> 4th March: <b>Symmetry breaking on primitive groups</b> <br>
                Seminars on Groups and Graphs, SUSTech</li>
        </ul>
