--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> 23rd March: <b>Bases for permutation groups</b> <br>
                Junior London Algebra Colloquium, Imperial College London</li>
-           <li> 4th March: <b>Symmetry breaking on primitive groups</b> <br>
+           <li> 4th March: <b>Symmetry breaking on primitive groups</b> (<a href="Sym_break_230304.pdf">slides</a> | <a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>)<br>
                Seminars on Groups and Graphs, SUSTech</li>
        </ul>
       </div>
