--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 23rd March: <b>Bases for permutation groups</b> <br>
+           <li> 23rd March: <b>Bases for permutation groups</b> (<a href="JLAC_230323.pdf">notes</a>）<br>
                Junior London Algebra Colloquium, Imperial College London</li>
            <li> 4th March: <b>Symmetry breaking on primitive groups</b> (<a href="Sym_break_230304.pdf">slides</a> | <a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>)<br>
                Seminars on Groups and Graphs, SUSTech</li>
