--- a/meetings.html
+++ b/meetings.html
@@ -69,6 +69,8 @@
       <div class="list">
         <ul>
             
+            <li> 10th -- 14th November 2023: <b>The Fourth International Conference on Group Actions and Transitive Graphs</b> <br>
+            SUSTech, Shenzhen, China </li>
             <li> 11th -- 14th July: <b>24th Postgraduate Group Theory Conference</b> (<a href="https://sites.google.com/view/pgtc2023/home">link</a>) <br>
             Heriot-Watt University, Edinburgh, UK </li>
             <li> 19th -- 23rd June: <b>CMI-HIMR Summer School: Probabilistic Group Theory</b> (<a href="https://web-eur.cvent.com/event/1c4ee187-2fb3-4d9b-aa98-27ec01200405/summary?RefId=Host">link</a>) <br>
