--- a/meetings.html
+++ b/meetings.html
@@ -69,7 +69,7 @@
       <div class="list">
         <ul>
             
-            <li> 10th -- 14th November 2023: <b>The Fourth International Conference on Group Actions and Transitive Graphs</b> <br>
+            <li> 10th -- 14th November: <b>The Fourth International Conference on Group Actions and Transitive Graphs</b> <br>
             SUSTech, Shenzhen, China </li>
             <li> 11th -- 14th July: <b>24th Postgraduate Group Theory Conference</b> (<a href="https://sites.google.com/view/pgtc2023/home">link</a>) <br>
             Heriot-Watt University, Edinburgh, UK </li>
