--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
     <p> More specifically, I mainly work on base sizes (the minimal size of a <a href="https://en.wikipedia.org/wiki/Base_(group_theory)">base</a>) of finite permutation groups.
         This has been studied since 19th century when permutation group theory was still young, finding a wide range of connections to other areas.
         In my recent <a href="https://arxiv.org/abs/2012.13747">paper</a>, I determine the precise base size of every finite <a href="https://en.wikipedia.org/wiki/Primitive_permutation_group">primitive permutation group</a> of diagonal type.
-        This is the first family of primitive groups arising in the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a> for which people have a complete answer in terms of base sizes.
+        This is the first <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott</a> family for which people have a complete answer on base sizes.
     </p>
     
 
