--- a/research.html
+++ b/research.html
@@ -43,7 +43,9 @@
     <p> My main interest of research is in group theory, mostly finite groups. I have a particular interest in permutation groups, as well as some related structures in combinatorics (e.g. transitive graphs). I'm also interested in finite simple groups, especially their subgroup structures and conjugacy classes. </p>
     
     <p> More specifically, I mainly work on base sizes (the minimal size of a <a href="https://en.wikipedia.org/wiki/Base_(group_theory)">base</a>) of finite permutation groups.
-        This has been studied since 19th century when permutation group theory was still young, finding a wide range of connections to other areas.
+        This has been studied since 19th century when permutation group theory was still young, finding a wide range of connections to other areas.</p>
+        
+    <p>
         In my recent <a href="https://arxiv.org/abs/2012.13747">paper</a>, I determine the precise base size of every finite <a href="https://en.wikipedia.org/wiki/Primitive_permutation_group">primitive permutation group</a> of diagonal type.
         In view of the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a>, this is the first family of primitive groups for which people have a complete answer on base sizes.
     </p>
