--- a/research.html
+++ b/research.html
@@ -47,7 +47,7 @@
         
     <p>
         In my recent <a href="https://arxiv.org/abs/2303.14290">paper</a>, I determine the precise base size of every finite <a href="https://en.wikipedia.org/wiki/Primitive_permutation_group">primitive permutation group</a> of diagonal type.
-        In view of the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a> (5 type version), this is the first family of primitive groups for which people have a complete answer on base sizes.
+        In view of the <a href="https://en.wikipedia.org/wiki/O%27Nan%E2%80%93Scott_theorem">O'Nan-Scott theorem</a> (5-type version), this is the first family of primitive groups for which people have a complete answer on base sizes.
     </p>
     
 
