--- a/teaching.html
+++ b/teaching.html
@@ -44,6 +44,7 @@
       <p>
       <div class="list">
         <ul>
+          <li> 2023/24 TB2: MATH10010 Introduction to Group Theory, UoB </li>
           <li> 2021/22 TB1: MATH10010 Introduction to Proofs, UoB </li>
           <li> 2019/20 Spring: MA109 Advanced Linear Algebra, SUSTech </li>
           <li> 2019/20 Fall: MA107 Advanced Linear Algebra I, SUSTech </li>
