--- a/meetings.html
+++ b/meetings.html
@@ -43,7 +43,7 @@
     <h3> Research visits </h3>
     
   <ul>
-     <li> 2023: Capital Normal University (1 week); SUSTech (1 month) </li>
+     <li> 2023: SUSTech (1 month); Capital Normal University (1 week); Xiamen University (1 week)</li>
       
       <li> 2021: SUSTech (2 months) </li>
 
