--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 7th September: <b>Bases for permutation groups</b><br>
+           <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
                SUSTech</li>
            <li> 23rd March: <b>Bases for permutation groups</b> [<a href="JLAC_230323.pdf">notes</a>]<br>
                Junior London Algebra Colloquium, Imperial College London</li>
