--- a/talks.html
+++ b/talks.html
@@ -45,6 +45,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
+               Algebra Seminar, University of Birmingham</li>
            <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
                SUSTech</li>
            <li> 23rd March: <b>Bases for permutation groups</b> [<a href="JLAC_230323.pdf">notes</a>]<br>
