--- a/talks.html
+++ b/talks.html
@@ -47,6 +47,8 @@
        <ul>
            <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
+           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> <br>
+               Tianyuan Mathematical Center in Southeast China, Xiamen University</li>
            <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
                SUSTech</li>
            <li> 23rd March: <b>Bases for permutation groups</b> [<a href="JLAC_230323.pdf">notes</a>]<br>
