--- a/meetings.html
+++ b/meetings.html
@@ -71,7 +71,7 @@
       <div class="list">
         <ul>
             
-            <li> 15th -- 20th November: <b>16th National Conference on Algebra</b> [<a href="https://algebra2022.casconf.cn/page/1645308829866528768">link</a>] <br>
+            <li> 15th -- 20th November: <b>16th National Conference on Algebra</b> [<a href="https://algebra2022.casconf.cn/">link</a>] <br>
             Quanzhou, China </li>
             <li> 10th -- 14th November: <b>The Fourth International Conference on Group Actions and Transitive Graphs</b> <br>
             SUSTech, Shenzhen, China </li>
