--- a/talks.html
+++ b/talks.html
@@ -49,6 +49,8 @@
                Algebra Seminar, University of Birmingham</li>
            <li> 26th September: <b>Symmetry breaking on graphs and groups</b> <br>
                Tianyuan Mathematical Center in Southeast China, Xiamen University</li>
+           <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> <br>
+               Capital Normal University</li>
            <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
                SUSTech</li>
            <li> 23rd March: <b>Bases for permutation groups</b> [<a href="JLAC_230323.pdf">notes</a>]<br>
