--- a/talks.html
+++ b/talks.html
@@ -45,10 +45,10 @@
         <p>
         <div class="list">
        <ul>
-           <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
+           <li> 30th November: <b>Bases for permutation groups</b>  <br>
                Algebra Seminar, University of Birmingham</li>
-           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> <br>
-               Tianyuan Mathematical Center in Southeast China, Xiamen University</li>
+           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
+               Seminars on Discrete Mathematics, Xiamen University</li>
            <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> <br>
                Capital Normal University</li>
            <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
