--- a/talks.html
+++ b/talks.html
@@ -49,7 +49,7 @@
                Algebra Seminar, University of Birmingham</li>
            <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
                Seminars on Discrete Mathematics, Xiamen University</li>
-           <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> <br>
+           <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> [<a href="CNU_20230916.pdf">notes</a>]<br>
                Capital Normal University</li>
            <li> 7th September: <b>Bases for permutation groups</b> [<a href="SUSTech_230907.pdf">notes</a>] <br>
                SUSTech</li>
