--- a/talks.html
+++ b/talks.html
@@ -45,7 +45,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 30th November: <b>Bases for permutation groups</b>  <br>
+           <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
            <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
                Seminars on Discrete Mathematics, Xiamen University</li>
