--- a/talks.html
+++ b/talks.html
@@ -47,7 +47,7 @@
        <ul>
            <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
-           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="XMU_20230926.pdf">notes</a>||<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
+           <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="XMU_20230926.pdf">notes</a>] [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
                Seminars on Discrete Mathematics, Xiamen University</li>
            <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> [<a href="CNU_20230916.pdf">notes</a>]<br>
                Capital Normal University</li>
@@ -55,7 +55,7 @@
                SUSTech</li>
            <li> 23rd March: <b>Bases for permutation groups</b> [<a href="JLAC_230323.pdf">notes</a>]<br>
                Junior London Algebra Colloquium, Imperial College London</li>
-           <li> 4th March: <b>Symmetry breaking on primitive groups</b> [<a href="Sym_break_230304.pdf">slides</a>||<a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>]<br>
+           <li> 4th March: <b>Symmetry breaking on primitive groups</b> [<a href="Sym_break_230304.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2023-03-04-hyh.html">webpage</a>]<br>
                Seminars on Groups and Graphs, SUSTech</li>
        </ul>
       </div>
@@ -66,9 +66,9 @@
       <p>
         <div class="list">
        <ul>
-           <li> 5th September: <b>Base-two primitive permutation groups</b> [<a href="YGT_220905.pdf">slides</a>||<a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>]<br>
+           <li> 5th September: <b>Base-two primitive permutation groups</b> [<a href="YGT_220905.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1kYnpgCraJK1Vjn1dOYstVIp6OksHnura/view?usp=sharing">video</a>]<br>
                Young Group Theorists Workshop, Les Diablerets</li>
-           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> [<a href="Melbourne_220818.pdf">slides</a>||<a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>]<br>
+           <li> 18th August: <b>Bases, distinguishing partitions and probabilistic methods</b> [<a href="Melbourne_220818.pdf">slides</a>] [<a href="https://events.unimelb.edu.au/mathematics-and-statistics/event/16634-bases-distinguishing-partitions-and-probabilistic">webpage</a>]<br>
                Discrete Structures and Algorithms Seminar, University of Melbourne</li>
            <li> 4th August: <b>Base-two primitive permutation groups</b> [<a href="StAndrews_220804.pdf">slides</a>] <br>
                Groups St Andrews, Newcastle</li>
@@ -76,9 +76,9 @@
                Groups and Graphs, Jiangxi University of Science and Technology</li>
            <li> 8th July: <b>Base-two primitive permutation groups</b> [<a href="PGTC_220708.pdf">slides</a>] <br>
                23rd Postgraduate Group Theory Conference, Imperial College London</li>
-           <li> 24th May: <b>Bases for primitive permutation groups</b> [<a href="SUSTech_220524.pdf">slides</a>||<a href="https://www.gtseminar.xyz/history/2022-05-24-hyh.html">webpage</a>]<br>
+           <li> 24th May: <b>Bases for primitive permutation groups</b> [<a href="SUSTech_220524.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2022-05-24-hyh.html">webpage</a>]<br>
                Group Theory Seminar, SUSTech</li>
-         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> [<a href="RegPower_220219.pdf">slides</a>||<a href="https://www.gtseminar.xyz/history/2022-02-19-ropgps.html">webpage</a>] <br>
+         <li> 19th February: <b> Regular orbits of primitive groups on power sets </b> [<a href="RegPower_220219.pdf">slides</a>] [<a href="https://www.gtseminar.xyz/history/2022-02-19-ropgps.html">webpage</a>] <br>
            Group Theory Seminar, SUSTech </li>
        </ul>
       </div>
@@ -99,10 +99,10 @@
            Group Theory Seminar, SUSTech </li>
        <li> 21st May: <b> Groups, graphs and transitivity </b> [<a href="Transitive graphs_210521.pdf">slides</a>] <br>
               Junior Algebra Colloquium, UoB </li>
-       <li> 22nd April: <b> The probabilistic method in group theory </b> [<a href="Prob_210422.pdf">slides</a>||<a href="https://math.sustech.edu.cn/seminar_all/12102.html?lang=en">webpage</a>] <br>
+       <li> 22nd April: <b> The probabilistic method in group theory </b> [<a href="Prob_210422.pdf">slides</a>] [<a href="https://math.sustech.edu.cn/seminar_all/12102.html?lang=en">webpage</a>] <br>
               Discrete Mathematics Seminar, SUSTech <br>
               (This was also the third part of the following talk.)</li>
-       <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> [<a href="Fixed point ratios.pdf">slides I</a>||<a href="fpr2.pdf">slides II</a>] <br>
+       <li> 11th March and 8th April: <b> Simple groups, fixed point ratios and applications (I and II) </b> [<a href="Fixed point ratios.pdf">slides I</a>] [<a href="fpr2.pdf">slides II</a>] <br>
               Seminar on Classical Groups, SUSTech </li>
        <li> 2nd January: <b> On valency problems of Saxl graphs </b> [<a href="ValSaxl_Talk_210102.pdf">slides</a>] <br>
               Workshop on Group Actions and Transitive Graphs, Kunming, China </li>
