--- a/talks.html
+++ b/talks.html
@@ -41,6 +41,17 @@
        <p> </p>
       <p> I'm happy to give talks/lectures to everyone on any topic that I'm familiar with. The following are my talks about my research projects. </p>
         
+
+        <h4> 2024 </h4>
+        <p>
+        <div class="list">
+       <ul>
+           <li> 29th January: <b>Bases for permutation groups</b> <br>
+               Algebra Seminar, University of Warwick</li>
+       </ul>
+      </div>
+      </p>
+        
         <h4> 2023 </h4>
         <p>
         <div class="list">
