--- a/talks.html
+++ b/talks.html
@@ -58,6 +58,8 @@
        <ul>
            <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
+           <li> 11th November: <b>Bases for permutation groups</b> <br>
+               The Fourth International Conference on Groups, Graphs and Combinatorics, SUSTech</li>
            <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="XMU_20230926.pdf">notes</a>] [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
                Seminars on Discrete Mathematics, Xiamen University</li>
            <li> 16th September: <b>Permutation groups: bases and Saxl graphs</b> [<a href="CNU_20230916.pdf">notes</a>]<br>
