--- a/meetings.html
+++ b/meetings.html
@@ -57,7 +57,7 @@
     <h3> Conference and seminar organisations </h3>
     
     <p>
-      I am co-organising the <a href="https://www.gtseminar.xyz/">Seminars on Groups and Graphs</a> based at SUSTech from 2021. I also served in the organisor committee for 4th International Conference on Groups, Graphs and Combinatorics.
+      I am co-organising the <a href="https://www.gtseminar.xyz/">Seminars on Groups and Graphs</a> based at SUSTech from 2021. I also served in the organisor committee for 4th International Conference on Groups, Graphs and Combinatorics in 2023.
     </p>
     
   
