--- a/talks.html
+++ b/talks.html
@@ -58,6 +58,8 @@
        <ul>
            <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
+           <li> 18th November: <b>Bases for permutation groups</b> <br>
+               16th National Conference on Algebra, Quanzhou, China</li>
            <li> 11th November: <b>Bases for permutation groups</b> [<a href="SUSTech_231111.pdf">slides</a>] <br>
                4th International Conference on Groups, Graphs and Combinatorics, SUSTech</li>
            <li> 26th September: <b>Symmetry breaking on graphs and groups</b> [<a href="XMU_20230926.pdf">notes</a>] [<a href="https://math.xmu.edu.cn/info/1034/25169.htm">webpage</a>]<br>
