--- a/talks.html
+++ b/talks.html
@@ -58,7 +58,7 @@
        <ul>
            <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
-           <li> 18th November: <b>Bases for permutation groups</b> <br>
+           <li> 18th November: <b>Bases for permutation groups</b> [<a href="Alg_231118.pdf">slides</a>] <br>
                16th National Conference on Algebra, Quanzhou, China</li>
            <li> 11th November: <b>Bases for permutation groups</b> [<a href="SUSTech_231111.pdf">slides</a>] <br>
                4th International Conference on Groups, Graphs and Combinatorics, SUSTech</li>
