--- a/talks.html
+++ b/talks.html
@@ -105,7 +105,7 @@
      <div class="list">
        <ul>
          <li> 13th December: <b> Base-two primitive permutation groups and their Saxl graphs </b> [<a href="43ACC_211213.pdf">slides</a>] <br>
-           43rd Australasian Combinatorics Conference, University of Melbourne </li>
+           43rd Australasian Combinatorics Conference, The University of Melbourne </li>
          <li> 14th November: <b> Regular suborbits of finite primitive groups </b> [<a href="SUSTech_211114.pdf">slides</a>]<br>
            Groups, Graphs and Combinatorics, SUSTech </li>
          <li> 8th November: <b> Base-two primitive permutation groups and their Saxl graphs </b> [<a href="LMS_211108.pdf">slides</a>]<br>
