--- a/meetings.html
+++ b/meetings.html
@@ -134,7 +134,7 @@
           
           
           <li> 13th -- 17th December: <b>43rd Australasian Combinatorics Conference</b> [<a href="https://43acc.ms.unimelb.edu.au/">link</a>] <br>
-            University of Melbourne, Australia (online)</li>
+            The University of Melbourne, Australia (online)</li>
           <li> 13th -- 14th November: <b>Groups, Graphs and Combinatorics</b> <br>
             SUSTech, Shenzhen, China (online) </li>
           <li> 8th November: <b>LMS Graduate Student Meeting Winter 2021</b> [<a href="https://www.lms.ac.uk/events/london-mathematical-society-virtual-graduate-student-meeting-2021">link</a>] <br>
