--- a/talks.html
+++ b/talks.html
@@ -56,7 +56,7 @@
         <p>
         <div class="list">
        <ul>
-           <li> 30th November: <b>Bases for permutation groups</b> [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
+           <li> 30th November: <b>Bases for permutation groups</b> [<a href="Birmingham_231130.pdf">notes</a>] [<a href="http://talks.bham.ac.uk/talk/index/5358">webpage</a>] <br>
                Algebra Seminar, University of Birmingham</li>
            <li> 18th November: <b>Bases for permutation groups</b> [<a href="Alg_231118.pdf">slides</a>] <br>
                16th National Conference on Algebra, Quanzhou, China</li>
