--- a/talks.html
+++ b/talks.html
@@ -46,6 +46,8 @@
         <p>
         <div class="list">
        <ul>
+           <li> 19th March: <b>Bases for permutation groups</b> [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
+               Algebra Seminar, UoB</li>
            <li> 29th January: <b>Bases for permutation groups</b> <br>
                Algebra Seminar, University of Warwick</li>
        </ul>
