--- a/meetings.html
+++ b/meetings.html
@@ -67,8 +67,8 @@
             with a group of people led by <a href="https://faculty.sustech.edu.cn/?tagid=lich&iscss=1&snapid=1&orderby=date&go=1&lang=en">Cai Heng Li</a>
           </li>
             <li> <b>Seminars on Groups and Graphs</b> [<a href="https://www.gtseminar.xyz/">website</a>] <br>
-            SUSTech, 2021-2024 <br>
-            with Junyan Chen, <a href="https://profiles.auckland.ac.nz/dzha470">Zhaochen Ding</a> and Yilin Xie </li>
+            SUSTech, 2021-24 <br>
+            with <a href="https://profiles.auckland.ac.nz/dzha470">Zhaochen Ding</a> (2021-24), Yilin Xie (2021-23) and Junyan Chen (2024) </li>
         </ul>
     </div>
     </p>
