--- a/meetings.html
+++ b/meetings.html
@@ -68,7 +68,7 @@
           </li>
             <li> <b>Seminars on Groups and Graphs</b> [<a href="https://www.gtseminar.xyz/">website</a>] <br>
             SUSTech, 2021-24 <br>
-            with <a href="https://profiles.auckland.ac.nz/dzha470">Zhaochen Ding</a> (2021-24), Yilin Xie (2021-23) and Junyan Chen (2024) </li>
+            with <a href="https://profiles.auckland.ac.nz/dzha470">Zhaochen Ding</a>, Yilin Xie (2021-23) and Junyan Chen (2024) </li>
         </ul>
     </div>
     </p>
