--- a/meetings.html
+++ b/meetings.html
@@ -59,14 +59,14 @@
         <p>
       <div class="list">
         <ul>
-          <li> <b>Junior Algebra and Combinatorics Seminar</b> <br>
+          <li> <i>Junior Algebra and Combinatorics Seminar</i> <br>
             UoB, 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
-          <li> <b>4th International Conference on Groups, Graphs and Combinatorics</b> <br>
+          <li> <i>4th International Conference on Groups, Graphs and Combinatorics</i> <br>
             SUSTech, November 2023 <br>
             with a group of people led by <a href="https://faculty.sustech.edu.cn/?tagid=lich&iscss=1&snapid=1&orderby=date&go=1&lang=en">Cai Heng Li</a>
           </li>
-            <li> <b>Seminars on Groups and Graphs</b> [<a href="https://www.gtseminar.xyz/">website</a>] <br>
+            <li> <i>Seminars on Groups and Graphs</i> [<a href="https://www.gtseminar.xyz/">website</a>] <br>
             SUSTech, 2021-24 <br>
             with <a href="https://profiles.auckland.ac.nz/dzha470">Zhaochen Ding</a>, Yilin Xie (2021-23) and Junyan Chen (2024) </li>
         </ul>
