--- a/meetings.html
+++ b/meetings.html
@@ -84,6 +84,8 @@
       <div class="list">
         <ul>
             
+            <li> 1st -- 3rd July: <b>Group Theory in Florence IV</b> [<a href="https://sites.google.com/view/groupsinflorenceiv/main?authuser=0">link</a>] <br>
+            University of Florence, Italy </li>
             <li> 24th -- 26th June: <b>New perspectives in Computational Group Theory</b> [<a href="https://sites.google.com/view/newperspectivescgt/home">link</a>] <br>
             University of Warwick, UK </li>
             
