--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
 <p> My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number">Erdős number</a> is 3. For example, there are two disjoint geodesics as follows:
     <ul>
            <li> H.Y. Huang -- T.C. Burness -- Á. Seress -- P. Erdős </li>
-           <li> H.Y. Huang -- C.H. Li -- P.P. Pálfy -- P. Erdős </li>
+           <li> H.Y. Huang -- C.H. Li -- P.P. Pálfy (or J. Širáň) -- P. Erdős </li>
        </ul>
     </p>
         
