--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
 
         <p> In 2022, I participated in the <a href="https://www.newton.ac.uk/event/gr2w02/">Simple groups, representations and applications</a> programme at the <a href="https://www.newton.ac.uk/">Isaac Newton Institute</a> in Cambridge. A brief description of my research on base-two primitive groups and their Saxl graphs up to that time can be found in my <a href="poster_2022_portrait.pdf">poster</a> for this programme.</p>
 
-<p> My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number">Erdős number</a> is 3. For example, there are two disjoint geodesics as follows:
+<p> My <a href="https://en.wikipedia.org/wiki/Erd%C5%91s_number">Erdős number</a> is 3. For example, there are two disjoint geodesics:
     <ul>
            <li> H.Y. Huang -- T.C. Burness -- Á. Seress -- P. Erdős </li>
            <li> H.Y. Huang -- C.H. Li -- P.P. Pálfy (or J. Širáň) -- P. Erdős </li>
@@ -86,7 +86,7 @@
           
           
             <li> <i> Base sizes of primitive groups of diagonal type </i> <br>
-                <b>Forum of Mathematics, Sigma</b>, to appear <br>
+                43 pages, <b>Forum of Mathematics, Sigma</b>, to appear <br>
                 <a href="https://arxiv.org/abs/2303.14290">arXiv:2303.14290</a>
             </li>
 
