--- a/talks.html
+++ b/talks.html
@@ -133,7 +133,7 @@
         <ul>
           <li> 26th November: <b> On valency problems of Saxl graphs </b> [<a href="ValSaxl_Talk_201126.pdf">slides</a>] <br>
           Discrete Mathematics Seminar, SUSTech </li>
-          <li> 17th November: <b> On valency problems of Saxl graphs </b> [<a href="ValSaxl_Talk_201117.pdf">slides</a>] <br>
+          <li> 17th November: <b> On valency problems of Saxl graphs </b> [<a href="../talks/ValSaxl_Talk_201117.pdf">slides</a>] <br>
           SUSTech </li>
         </ul>
     </div>
