--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <b>Email:</b> hy.huang (AT) bristol.ac.uk<br><br>
             <b>Address:</b> <a href="http://www.bristol.ac.uk/maths/">School of Mathematics</a>, <a href="https://www.bristol.ac.uk/">University of Bristol</a>, BS8 1UG, UK<br><br>
             <b>Office:</b> 1.14 Fry Building, BS8 1UG<br><br>
-            <b>Links:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1506962">MathSciNet</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://scholar.google.com/citations?user=RHJOsxEAAAAJ&hl=en">Google Scholar</a>, <a href="https://mathoverflow.net/users/131819/hongyi-huang">MathOverflow</a>, <a href="CV_Hong Yi Huang.pdf">CV</a>
+            <b>Links:</b> <a href="https://arxiv.org/a/huang_h_8.html">arXiv</a>, <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1506962">MathSciNet</a>, <a href="https://orcid.org/0000-0003-1457-1026">ORCID</a>, <a href="https://www.researchgate.net/profile/Hong-Yi-Huang-4">Researchgate</a>, <a href="https://scholar.google.com/citations?user=RHJOsxEAAAAJ&hl=en">Google Scholar</a>, <a href="CV_Hong Yi Huang.pdf">CV</a>
         </p>
         
         
