--- a/research.html
+++ b/research.html
@@ -86,8 +86,8 @@
           
           
             <li> <i> Base sizes of primitive groups of diagonal type </i> <br>
-                43 pages, <b>Forum of Mathematics, Sigma</b>, to appear <br>
-                <a href="https://arxiv.org/abs/2303.14290">arXiv: 2303.14290</a>
+                43 pages, <b>Forum of Mathematics, Sigma</b>, to appear  <br>
+                <a href="https://arxiv.org/abs/2303.14290">arXiv: 2303.14290</a> | <a href="https://doi.org/10.1017/fms.2023.121">doi: 10.1017/fms.2023.121</a>
             </li>
 
             <li> <i> Finite permutation groups of rank \(3\) </i> <br>
