--- a/meetings.html
+++ b/meetings.html
@@ -61,7 +61,7 @@
         <ul>
           <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> <br>
             UoB, 2024 <br>
-            with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith-Rowlatt</a> </li>
+            with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
           <li> <i>4th International Conference on Groups, Graphs and Combinatorics</i> <br>
             SUSTech, November 2023 <br>
             with a group of people led by <a href="https://faculty.sustech.edu.cn/?tagid=lich&iscss=1&snapid=1&orderby=date&go=1&lang=en">Cai Heng Li</a>
