--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
           
             <li> <i> Base sizes of primitive groups of diagonal type </i> <br>
                 <b>Forum of Mathematics, Sigma</b> 12 (2024), Paper No. e2, 43 pp.  <br>
-                <a href="https://arxiv.org/abs/2303.14290">arXiv: 2303.14290</a> | <a href="https://doi.org/10.1017/fms.2023.121">doi: 10.1017/fms.2023.121</a>
+                <a href="https://arxiv.org/abs/2303.14290">arXiv: 2303.14290</a> | <a href="https://doi.org/10.1017/fms.2023.121">doi: 10.1017/fms.2023.121</a> | <a href="https://mathscinet.ams.org/mathscinet-getitem?mr=4685056">MathSciNet: MR4685056</a>
             </li>
 
             <li> <i> Finite permutation groups of rank \(3\) </i> <br>
