--- a/meetings.html
+++ b/meetings.html
@@ -59,7 +59,7 @@
         <p>
       <div class="list">
         <ul>
-          <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> <br>
+          <li> <i>Bristol Junior Algebra and Combinatorics Seminar</i> [<a href="https://sites.google.com/view/bjacs/home">website</a>] <br>
             UoB, 2024 <br>
             with <a href="https://marinaanagno.github.io/">Marina Anagnostopoulou-Merkouri</a> and <a href="https://research-information.bris.ac.uk/en/persons/merlin-haith-rowlatt">Merlin Haith Rowlatt</a> </li>
           <li> <i>4th International Conference on Groups, Graphs and Combinatorics</i> <br>
