--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </p>
 
         <p>
-            In 2024, I will co-organise the Junior Algebra and Combinatorics Seminar at UoB.
+            I am also co-organising the <a href="https://sites.google.com/view/bjacs/home">Bristol Junior Algebra and Combinatorics Seminar</a> in 2023/24 TB2.
         </p>
         
        
