--- a/talks.html
+++ b/talks.html
@@ -48,7 +48,7 @@
        <ul>
            <li> 19th March: <b>Bases for permutation groups</b> [<a href="https://www.bristolmathsresearch.org/seminar/hongyi-huang/">webpage</a>] <br>
                Algebra Seminar, UoB</li>
-           <li> 29th January: <b>Bases for permutation groups</b> [<a href="https://warwick.ac.uk/fac/sci/maths/research/events/seminars/areas/algebra/23-24/">webpage</a>] <br>
+           <li> 29th January: <b>Bases for permutation groups</b> [<a href="../talks/Warwick_240129.pdf">notes</a>] [<a href="https://warwick.ac.uk/fac/sci/maths/research/events/seminars/areas/algebra/23-24/">webpage</a>] <br>
                Algebra Seminar, University of Warwick</li>
        </ul>
       </div>
